fix(datetime): add ellipsis for overflowing custom date label

--- a/packages/core/src/components/datetime/datetime.scss
+++ b/packages/core/src/components/datetime/datetime.scss
@@ -100,3 +100,10 @@
     }
   }
 }
+
+.custom-date-target {
+  overflow: hidden;
+  padding-right: var(--spacing-xlarge);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
